--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,32 @@
-cmake_minimum_required(VERSION 3.18)
-project(source-copy VERSION 0.2.0)
+# --- Detect if the plugin is build out of tree or not ---
+if(CMAKE_PROJECT_NAME STREQUAL "obs-studio")
+  set(BUILD_OUT_OF_TREE OFF)
+else()
+  set(BUILD_OUT_OF_TREE ON)
+  cmake_minimum_required(VERSION 3.18)
+endif()
+
+project(source-copy VERSION 0.2.1)
 set(PROJECT_FULL_NAME "Source Copy")
+add_library(${PROJECT_NAME} MODULE)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.h.in ${CMAKE_CURRENT_SOURCE_DIR}/version.h)
 
-find_package(Qt5Widgets)
-
-set(CMAKE_AUTOMOC ON)
-
-set(source-copy_HEADERS
+target_sources(${PROJECT_NAME} PRIVATE
+source-copy.cpp
 	source-copy.hpp
 	version.h)
-set(source-copy_SOURCES
-	source-copy.cpp)
 
-if(WIN32)
+if(BUILD_OUT_OF_TREE)
+	find_package(libobs REQUIRED)
+	find_package(obs-frontend-api REQUIRED)
+	include(cmake/ObsPluginHelpers.cmake)
+	set(OBS_FRONTEND_API_NAME "obs-frontend-api")
+else()
+	set(OBS_FRONTEND_API_NAME "frontend-api")
+endif()
+  
+if(OS_WINDOWS)
 	get_filename_component(ISS_FILES_DIR "${CMAKE_BINARY_DIR}\\..\\package" ABSOLUTE)
 	file(TO_NATIVE_PATH "${ISS_FILES_DIR}" ISS_FILES_DIR)
 	get_filename_component(ISS_PACKAGE_DIR "${CMAKE_PACKAGE_PREFIX}\\.." ABSOLUTE)
@@ -24,39 +36,42 @@ if(WIN32)
 	configure_file("installer.iss.in"
 			"${PROJECT_BINARY_DIR}/installer.iss"
 		)
-	configure_file(resource.rc.in source-copy.rc)
-	list(APPEND source-copy_SOURCES
-		source-copy.rc)
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/resource.rc.in ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.rc)
+	target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.rc)
+	
+elseif(OS_MACOS)
+	set(MACOS_BUNDLEID "com.exeldro.${PROJECT_NAME}")
+	set(MACOSX_PLUGIN_GUI_IDENTIFIER "${MACOS_BUNDLEID}")
+	set(MACOSX_PLUGIN_BUNDLE_VERSION "${PROJECT_VERSION}")
+	set(MACOSX_PLUGIN_SHORT_VERSION_STRING "1")
+	configure_file(cmake/bundle/macos/installer-macos.pkgproj.in ${CMAKE_BINARY_DIR}/installer-macos.generated.pkgproj)
+	target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
 endif()
 
-if(BUILD_OUT_OF_TREE)
-    find_package(LibObs REQUIRED)
-endif()
+# lines if you want add Qt UI in your plugin
+find_qt(COMPONENTS Widgets COMPONENTS_LINUX Gui)
+set_target_properties(${PROJECT_NAME} PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
 
-add_library(source-copy MODULE
-	${source-copy_HEADERS}
-	${source-copy_SOURCES})
-
-target_link_libraries(source-copy
-		obs-frontend-api
-		Qt5::Widgets
-		libobs)
+target_link_libraries(${PROJECT_NAME}
+		OBS::${OBS_FRONTEND_API_NAME}
+		Qt::Widgets
+		OBS::libobs)
 
 if(BUILD_OUT_OF_TREE)
-    if(NOT LIB_OUT_DIR)
-        set(LIB_OUT_DIR "/lib/obs-plugins")
-    endif()
-    if(NOT DATA_OUT_DIR)
-        set(DATA_OUT_DIR "/share/obs/obs-plugins/source-copy")
-    endif()
-    set_target_properties(source-copy PROPERTIES PREFIX "")
-    install(TARGETS source-copy
-        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_OUT_DIR})
-    install(DIRECTORY data/locale
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/${DATA_OUT_DIR})
+	if(NOT LIB_OUT_DIR)
+		set(LIB_OUT_DIR "/lib/obs-plugins")
+	endif()
+	if(NOT DATA_OUT_DIR)
+		set(DATA_OUT_DIR "/share/obs/obs-plugins/${PROJECT_NAME}")
+	endif()
+	set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
+	install(TARGETS ${PROJECT_NAME}
+		LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_OUT_DIR})
+	install(DIRECTORY data/locale
+		DESTINATION ${CMAKE_INSTALL_PREFIX}/${DATA_OUT_DIR})
 else()
-    target_include_directories(source-copy PRIVATE
-        "${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
-    set_target_properties(source-copy PROPERTIES FOLDER "plugins/exeldro")
-    install_obs_plugin_with_data(source-copy data)
+	target_include_directories(${PROJECT_NAME} PRIVATE
+		"${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
+	set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "plugins/exeldro")
 endif()
+setup_plugin_target(${PROJECT_NAME})
